--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="main-div">
 
         <div class="checkout__box">
-            <button id="checkout__btn">Check Out</button>
+            <button style="cursor: pointer;" type="button" id="checkout__btn">Check Out</button>
         </div>
 
 
         <div class="checkin__box">
-            <button id="checkin__btn">Check In</button>
+            <button id="checkin__btn">Check In </button>
         </div>
 
     </div>
@@ -92,10 +92,27 @@
 
 
 
-    <div class="checkout__div"></div>
+    <div class="checkout__div">
+        <h2 class="head1">CHECK-IN FORM</h1>
+
+            <form class="checkin__form">
+
+                <div class="checkin-row">
+                    <label class="check-heads">Employee Code :</label><br>
+                    <input class="input-txt" type="text" name="emp_info" required>
+                </div>
+
+                <button class="check-in" id="check-in" type="submit">CHECK IN</button>
+                <button class="check-in" id="back" type="submit">back</button>
 
 
+            </form>
 
+
+    </div>
+
+
+<script src="AG.js"></script>
 
 </body>
 
