--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                 <div class="checkin-row">
                     <label class="check-heads">Employee Code :</label><br>
-                    <input class="input-txt" type="text" name="emp_info" required>
+                    <input class="input-txt1" type="text" name="emp_info" required>
                 </div>
 
                 <button class="check-in" id="check-in" type="submit">CHECK IN</button>
