--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 
                 <div class="check-row">
                     <label class="check-heads">Checkout Time :</label><br>
-                    <input class="input-txt" type="text" name="chkout_time" required>
+                    <input class="input-txt" type="time" name="chkout_time" required>
                 </div>
 
                 <div class="check-row">
                     <label class="check-heads">Expected Check-in Time :</label><br>
-                    <input class="input-txt" type="text" name="checkin_time" required>
+                    <input class="input-txt" type="time" name="checkin_time" required>
                 </div>
 
                 <div class="check-row">
