--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <button class="check-in" id="check-in" type="submit">CHECK IN</button>
-                <button class="check-in" id="back" type="submit">back</button>
+                <button class="check-in" id="back" type="submit">BACK</button>
 
 
             </form>
