--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
     <div class="checkin__div">
-        <h2 class="head">CHECKOUT FORM</h1>
+        <h2 class="head">CHECKOUT  FORM</h1>
 
             <div class="search-area">
                 <input class="searcher" placeholder="Search by Employee Name" type="text">
@@ -63,12 +63,12 @@
 
                 <div class="check-row">
                     <label class="check-heads">Checkout Time :</label><br>
-                    <input class="input-txt" type="time" name="chkout_time" required>
+                    <input style="background-color: white;" class="input-txt" type="time" name="chkout_time" required>
                 </div>
 
                 <div class="check-row">
                     <label class="check-heads">Expected Check-in Time :</label><br>
-                    <input class="input-txt" type="time" name="checkin_time" required>
+                    <input style="background-color: white;" class="input-txt" type="time" name="checkin_time" required>
                 </div>
 
                 <div class="check-row">
@@ -93,7 +93,7 @@
 
 
     <div class="checkout__div">
-        <h2 class="head1">CHECK-IN FORM</h1>
+        <h2 class="head1">CHECK-IN  FORM</h1>
 
             <form class="checkin__form">
 
@@ -112,7 +112,7 @@
     </div>
 
 
-<script src="AG.js"></script>
+    <script src="AG.js"></script>
 
 </body>
 
