--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
                 <div class="check-row">
                     <label class="check-heads">Return :</label><br>
-                    <select class="input-txt" name="return" required>
-                        <option value="">-- Select --</option>
+                    <select style="background-color: white;" class="input-txt" name="return" required>
+                        <option value=""> -- Select -- </option>
                         <option value="yes">Yes</option>
                         <option value="no">No</option>
                     </select>
