--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="ag.css">
+    <!-- For iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!-- Optional: for Android (older support) -->
+    <meta name="mobile-web-app-capable" content="yes">
+
+    <!-- Optional: icon -->
+    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
 
 </head>
 
@@ -28,7 +38,7 @@
 
 
     <div class="checkin__div">
-        <h2 class="head">CHECKOUT  FORM</h1>
+        <h2 class="head">CHECKOUT FORM</h1>
 
             <div class="search-area">
                 <input class="searcher" placeholder="Search by Employee Name" type="text">
@@ -93,7 +103,7 @@
 
 
     <div class="checkout__div">
-        <h2 class="head1">CHECK-IN  FORM</h1>
+        <h2 class="head1">CHECK-IN FORM</h1>
 
             <form class="checkin__form">
 
