--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
     <!-- Optional: icon -->
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
 
+    <style>
+        #main{
+            margin:auto;
+        }
+    </style>
+
 </head>
 
 <body>
+
+<div id="main">
 
 
     <div class="main-div">
@@ -125,6 +133,11 @@
 
 
     </div>
+
+
+
+</div>
+    
 
 
     <script src="AG.js"></script>
