--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
                 <tr class="check-row">
                     <td class="check-heads"><label>Return :</label></td>
                     <td>
-                        <select style="background-color: white;width:90%;height:35px ;" class="input-txt" name="return" required>
-                            <option value=""> -- Select -- </option>
+                        <select style="background-color: white;width:92%;height:35px ;" class="input-txt" name="return" required>
                             <option value="yes">Yes</option>
                             <option value="no">No</option>
                         </select>
@@ -128,9 +127,12 @@
                     <input class="input-txt1" type="text" name="emp_info" required>
                 </div>
 
-                <button class="check-in" id="check-in" type="submit">CHECK IN</button>
-                <button class="check-in" id="back" type="submit">BACK</button>
-
+                <div class="checkout__btn">
+                    <button class="check-in" id="check-in" type="submit">CHECK IN</button>
+                    <button class="check-in" id="back" type="submit">BACK</button>
+    
+                </div>
+            
 
             </form>
 
